# haskell-alpm

./: alpm.cabal
src/Distribution/ArchLinux/: ALPM.hs
src/Distribution/ArchLinux/ALPM/: Core.chs  List.chs  Types.chs
src/Distribution/ArchLinux/ALPM/Internal/: Core.chs  List.chs  Monad.chs  Types.chs
tests/: Core.hs  List.hs  Tests.hs  Util.hs
