Name:          alpm
Version:       0.0
Stability:     Alpha
Synopsis:      Bindings for the Arch Linux Package Management library.
Description:   Bindings for the Arch Linux Package Management library.
License:       GPL
License-File:  LICENSE
Build-Type:    Simple
Cabal-Version: >=1.10
Author:        Andreas Baldeau
Maintainer:    Andreas Baldeau <andreas@baldeau.net>
Homepage:      http://github.com/baldo/haskell-alpm
Bug-Reports:   http://github.com/baldo/haskell-alpm
Category:      Graphics
Tested-With:   GHC == 7.0.2

Extra-Source-Files:
    README

Source-Repository head
    Type:     git
    Location: git://github.com/baldo/haskell-alpm

Test-Suite Tests
    Type:
        exitcode-stdio-1.0

    Default-Language:
        Haskell2010

    Main-Is:
        Tests.hs

    Hs-Source-Dirs:
        src
        tests

    Build-Depends:
        alpm,
        base >= 4 && < 5,
        HUnit == 1.2.*,
        HTF == 0.7.*

Library
    Hs-Source-Dirs:
        src

    Default-Language:
        Haskell2010

    Build-Depends:
        base >= 4 && < 5

    Build-Tools:
        c2hs >= 0.16.3 && < 0.17

    Ghc-Options:
        -Wall

    Exposed-Modules:
        Distribution.ArchLinux.ALPM.Types
        Distribution.ArchLinux.ALPM.List
        Distribution.ArchLinux.ALPM.Core

    Extra-Libraries:
        alpm

