Name:          alpm
Version:       0.0
Stability:     Alpha
Synopsis:      Bindings for the Arch Linux Package Management library.
Description:   Bindings for the Arch Linux Package Management library.
License:       GPL
License-File:  LICENSE
Build-Type:    Simple
Cabal-Version: >=1.10
Author:        Andreas Baldeau,
               Daniel Ehlers
Maintainer:    Andreas Baldeau <andreas@baldeau.net>,
               Daniel Ehlers <danielehlers@mindeye.net>
Homepage:      http://github.com/baldo/haskell-alpm
Bug-Reports:   http://github.com/baldo/haskell-alpm
Category:      Graphics
Tested-With:   GHC == 7.0.2

Extra-Source-Files:
    README

Source-Repository head
    Type:     git
    Location: git://github.com/baldo/haskell-alpm

Test-Suite Tests
    Type:
        exitcode-stdio-1.0

    Default-Language:
        Haskell2010

    Main-Is:
        Tests.hs

    Hs-Source-Dirs:
        tests

    Build-Depends:
        alpm,
        base >= 4 && < 5,
        mtl  == 2.0.*,
        HUnit == 1.2.*,
        HTF == 0.7.*

    Ghc-Options:
        -Wall

Library
    Hs-Source-Dirs:
        src

    Default-Language:
        Haskell2010

    Build-Depends:
        base == 4.*,
        mtl  == 2.0.*

    Build-Tools:
        c2hs >= 0.16.3 && < 0.17

    Ghc-Options:
        -Wall

    Exposed-Modules:
        Distribution.ArchLinux.ALPM

    Other-Modules:
        Distribution.ArchLinux.ALPM.Internal.Types
        Distribution.ArchLinux.ALPM.Internal.Monad
        Distribution.ArchLinux.ALPM.Internal.List
        Distribution.ArchLinux.ALPM.Internal.Core

    Extra-Libraries:
        alpm

